# PX4-Autopilot

./: .gitmodules
.github/workflows/: build_all_targets.yml  checks.yml  clang-tidy.yml  compile_macos.yml  compile_ubuntu.yml  ekf_functional_change_indicator.yml  ekf_update_change_indicator.yml  failsafe_sim.yml  fuzzing.yml  mavros_mission_tests.yml  mavros_offboard_tests.yml  nuttx_env_config.yml  ros_integration_tests.yml  ros_translation_node.yml  sitl_tests.yml
ROMFS/px4fmu_common/init.d/: rc.mc_apps
boards/px4/fmu-v6x/: aerial-manipulator.px4board
boards/px4/sitl/: default.px4board
msg/: AmPolicyObservation.msg  AmPosControlStatus.msg  AmTestResult.msg  AmTestStatus.msg  ArmJointCommand.msg  ArmJointState.msg  CMakeLists.txt
msg/px4_msgs_old/msg/: VehicleStatusV0.msg
msg/versioned/: VehicleStatus.msg
src/drivers/osd/atxxxx/: atxxxx.cpp
src/drivers/rc/crsf_rc/: CrsfRc.cpp
src/drivers/rc_input/: crsf_telemetry.cpp
src/lib/events/: enums.json
src/lib/modes/: ui.hpp
src/modules/am_pos_control/: CMakeLists.txt  Kconfig  am_pos_control.cpp  am_pos_control.hpp  am_pos_control_params.c  am_pos_control_policy_blob_test.cpp  am_pos_control_test.cpp  rl_tools_adapter.cpp  rl_tools_adapter.hpp
src/modules/am_pos_control/blob/: policy.h  policy.json
src/modules/commander/: CMakeLists.txt  Commander.cpp  Commander.hpp  CommanderDisarmTest.cpp  UserModeIntention.cpp  UserModeIntention.hpp  UserModeIntentionTest.cpp  module.yaml  px4_custom_mode.h  px4_custom_mode_test.cpp
src/modules/commander/HealthAndArmingChecks/: AmPosControlCheckTest.cpp  CMakeLists.txt  HealthAndArmingChecks.hpp
src/modules/commander/HealthAndArmingChecks/checks/: amPosControlCheck.cpp  amPosControlCheck.hpp
src/modules/commander/ModeUtil/: CMakeLists.txt  control_mode.cpp  control_mode.hpp  control_mode_test.cpp  conversions.hpp  mode_requirements.cpp  mode_requirements_test.cpp
src/modules/commander/failsafe/: failsafe.cpp
src/modules/flight_mode_manager/: CMakeLists.txt  FlightModeManager.cpp
src/modules/flight_mode_manager/tasks/ManualAmPosition/: CMakeLists.txt  FlightTaskManualAmPosition.cpp  FlightTaskManualAmPosition.hpp
src/modules/logger/: CMakeLists.txt  log_mode_test.cpp  logged_topics.cpp  logged_topics.h  logged_topics_test.cpp  logger.cpp  logger.h
src/modules/manual_control/: ManualControl.cpp  ManualControlTest.cpp
src/modules/mavlink/: AvailableModesTest.cpp  CMakeLists.txt
src/modules/mavlink/streams/: AVAILABLE_MODES.hpp
src/modules/rl_mc_arm_control/: CMakeLists.txt  Kconfig  rl_mc_arm_control.cpp  rl_mc_arm_control.hpp  rl_mc_arm_control_manual_reference.cpp  rl_mc_arm_control_manual_reference.hpp  rl_mc_arm_control_params.c  rl_tools_adapter.cpp  rl_tools_adapter.hpp
src/modules/rl_mc_arm_control/blob/: policy.h  policy.json
src/modules/uxrce_dds_client/: dds_topics.yaml
src/modules/zenoh/: Kconfig.topics  dds_topics.yaml
